--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li>Lasagna Recipe</li>
+            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
         </ul>
     </body>
 </html>
