--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+            <li><a href="./recipes/risotto.html">Risotto Recipe</a></li>
         </ul>
     </body>
 </html>
