--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
-            <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
-            <li><a href="./recipes/risotto.html">Risotto Recipe</a></li>
+            <li><a target="_blank" href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+            <li><a target="_blank" href="./recipes/pizza.html">Pizza Recipe</a></li>
+            <li><a target="_blank" href="./recipes/risotto.html">Risotto Recipe</a></li>
         </ul>
     </body>
 </html>
